--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
-<% provide :title, t("sign_up") %>
-<h1>Sign up</h1>
+<% provide :title, "Sign Up" %>
+<h1><%= "Sign up" %></h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for @user do |f| %>
 
-      <% if @user.errors.any? %>
+    <% if @user.errors.any? %>
         <div id="error_explanation">
           <div class="alert alert-danger">
             <%= t "the_form_contains" %>
@@ -19,15 +19,15 @@
         </div>
       <% end %>
 
-      <%= f.label :name %>
-      <%= f.text_field :name %>
-      <%= f.label :email %>
-      <%= f.email_field :email %>
-      <%= f.label :password %>
-      <%= f.password_field :password %>
-      <%= f.label :password_confirmation, t("confirmation") %>
-      <%= f.password_field :password_confirmation %>
-      <%= f.submit  "Create my account", class: "btn btn-primary" %>
-    <% end %>
-  </div>
+     <%= f.label :name %>
+     <%= f.text_field :name %>
+     <%= f.label :email %>
+     <%= f.email_field :email %>
+     <%= f.label :password %>
+     <%= f.password_field :password %>
+     <%= f.label :password_confirmation, t("confirmation") %>
+     <%= f.password_field :password_confirmation %>
+     <%= f.submit  "Create my account", class: "btn btn-primary" %>
+  <% end %>
+ </div>
 </div>
