--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,30 +1,9 @@
 <h1>Help</h1>
 <p>
-
-link_to
-=> <a href="http://www.railstutorial.org/help">Rails Tutorial help page</a>.
-
-link_to
-=> <a href="http://www.railstutorial.org/book"><em>Ruby on Rails Tutorial</em>
+ Get help on the Ruby on Rails Tutorial at the
+<%= link_to "Rails Tutorial help page", "http://www.railstutorial.org/help" %>
+ To get help on this sample app, see the
+<%= link_to "Rails Tutorial help page", "http://www.railstutorial.org/help" %>book"><em>Ruby on Rails
+Tutorial</em>
 book</a>.
-</p>
-<html>
-<head>
-<title>Help | Ruby on Rails Tutorial Sample
-App</title>
-</head>
-<body>
-...
-</body>
-</html>
-<% provide :title, "Help" %>
-<h1>Help</h1>
-<p>
-Get help on the Ruby on Rails Tutorial at the
-link_to
-=> <a href="http://www.railstutorial.org/help">Rails Tutorial help page</a>.
-#To get help on this sample app, see the
-<a href="http://www.railstutorial.org/book"><em>Ruby
-on Rails
-Tutorial</em> book</a>.
 </p>
