--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -1,3 +1,6 @@
+@import 'bootstrap-sprockets';
+@import 'bootstrap';
+
 /* universal */
 
 body {
@@ -37,3 +40,4 @@ textarea {
   color: #fff;
   text-decoration: none;
 }
+
