--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -3,7 +3,5 @@
 <h1>Sample App</h1>
 <p>
   This is the home page for the
-  link_to
-  => <a href="http://www.railstutorial.org/">Ruby on
-  Rails Tutorial</a>sample application.
+  <%= link_to "Ruby on Rails Tutorial", "http://www.railstutorial.org/" %>sample application.
 </p>
